<resources>
    <string name="app_name">Hangman</string>
    <string name="letsPlay">Start</string>
    <string name="GenerateRandomWord">Get Random Word</string>
    <string name="UserEnteredWord">Enter A Word</string>
    <string name="ComputerOpponentInfo">You will play against the computer</string>
    <string name="PlayerOpponentInfo">You will play against a person</string>
    <string name="startGame">Play</string>
    <string name="enterSecretWord">Enter your secret word</string>
    <string name="submit">Submit</string>
    <string name="GuessWordActivityTitle">Guess the secret word</string>
    <string name="askForGuess">Guess a letter</string>
    <string name="onePlayer">One Player</string>
    <string name="twoPlayer">Two Players</string>
    <string name="wrong_picks">Wrong Picks</string>
    <string name="about_menu">About</string>
    <string name="about_message">About Message</string>
    <string name="title_text">Hangman</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_game_mode">Select a game mode</string>
</resources>
