<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/letsPlay"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/title" android:textSize="36sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/onePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RandomWord" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/title" android:onClick="startComputerPicksRandomWordMode"/>
    <Button
            android:text="@string/twoPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/EnterWord" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/RandomWord" android:onClick="startUserCreatesWordMode"/>

</androidx.constraintlayout.widget.ConstraintLayout>