<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <data>

        <variable
            name="enterSecretWordViewModel"
            type="com.example.hangman.GuessWord.enterSecretWordViewModel"/>

    </data>

    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitSecretWord"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="submitSecretWord"
            app:layout_constraintBaseline_toBaselineOf="@+id/enterSecretWord"
            app:layout_constraintStart_toEndOf="@+id/enterSecretWord" app:layout_constraintHorizontal_bias="0.5"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/enterSecretWord"
            android:hint="@string/enterSecretWord"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/submitSecretWord"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/UserModeTitle"/>
    <TextView
            android:text="@string/letsPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/UserModeTitle" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>