<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <Button
                android:text="@string/GenerateRandomWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/get_random_word_button" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:layout_marginTop="190dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:visibility="invisible"
                tools:visibility="visible"/>
        <Button
                android:text="@string/UserEnteredWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enter_word_button" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/get_random_word_button"/>
        <TextView
                android:text="@string/select_game_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:textSize="30sp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>