<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GuessUserWord">

    <TextView
            android:text="@string/GuessWordActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/guessWordTitle" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/disguisedWordTextView"
            app:layout_constraintHorizontal_bias="0.498"
            android:textSize="24sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/guessWordTitle"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/askForGuess" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/disguisedWordTextView" android:hint="@string/askForGuess"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button"/>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintBaseline_toBaselineOf="@+id/askForGuess"
            app:layout_constraintStart_toEndOf="@+id/askForGuess" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="evaluateGuess"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/guessedLetter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/askForGuess"/>
</androidx.constraintlayout.widget.ConstraintLayout>